# BankSystem

./: BankSystem.sln  BankSystem.vcxproj  BankSystem.vcxproj.filters  CMakeLists.txt  README.md  Request and response file formates.rtf  test.bankData
Debug/: BankSystem.exe.recipe  BankSystem.ilk  BankSystem.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/BankSystem.tlog/: BankSystem.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: BankAccount.cpp  BankAccount.h  BankSystemMain.cpp  FileSystem.cpp  FileSystem.h  HelperFuncs.cpp  HelperFuncs.h  RequestAndResponseManager.cpp  RequestAndResponseManager.h  SavingsAccount.cpp  SavingsAccount.h  UserProfile.cpp  UserProfile.h
x64/Debug/: BankSystem.exe.recipe  BankSystem.ilk  BankSystem.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/BankSystem.tlog/: BankSystem.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: BankSystem.exe.recipe  BankSystem.iobj  BankSystem.ipdb  BankSystem.vcxproj.FileListAbsolute.txt
x64/Release/BankSystem.tlog/: BankSystem.lastbuildstate  BankSystem.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
